# csv-batcher

./: .gitignore  README.md  pyproject.toml  pytest.ini
csv_batcher/: csv_pooler.py  csv_splitter.py  pooler.py  test_csv_pooler.py  test_pooler.py
csv_batcher/utils/: time.py
docs/: csv_batcher.html  index.html  search.js
docs/csv_batcher/: csv_pooler.html  csv_splitter.html  test_csv_pooler.html
notebooks/: Pandas.ipynb  Python.ipynb
